attempt to integrate with jit support